# trails_through_daybreak_lgc_alignment_choices

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  trails_through_daybreak_lgc_alignment_choices.yml
.github/workflows/: test.yml
data/: alignment_impacts.csv
solutions/: Balance.csv  Lv5 Law, Lv3 Chaos & Gray and earliest Mare (Chaos).csv
ttdlgc/: __init__.py  events.py  main.py  milp.py  simulation.py
