[project]
name = "trails_through_daybreak_lgc_alignment_choices"
version = "0.0.1"
dependencies = [
    "typer>=0.12.3",
    "pulp>=2.8.0"
]

[tool.setuptools]
packages = ["ttdlgc"]

[project.scripts]
ttdlgc_model = "ttdlgc:main_without_args"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "mypy==1.10.1",
    "ruff==0.5.1",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
lint.ignore = ["E731"]